--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<html lang="en">  <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="HelpMate AI Application"
+      content="HelpMate AI - 24/7 AI-powered customer support chatbot for instant answers to customer questions. Improve customer satisfaction with intelligent automated support."
     />
+    <meta name="keywords" content="customer support, AI chatbot, helpmate, customer service, artificial intelligence, support automation, 24/7 support" />
+    <meta name="author" content="HelpMate AI" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://customer-ai-support.onrender.com/" />
+    <meta property="og:title" content="HelpMate AI - Intelligent Customer Support Automation" />
+    <meta property="og:description" content="AI-powered customer support that provides instant answers to customer questions, 24/7 support, and seamless escalation to human agents." />
+    <meta property="og:image" content="%PUBLIC_URL%/og-image.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://customer-ai-support.onrender.com/" />
+    <meta property="twitter:title" content="HelpMate AI - Intelligent Customer Support Automation" />
+    <meta property="twitter:description" content="AI-powered customer support that provides instant answers to customer questions, 24/7 support, and seamless escalation to human agents." />
+    <meta property="twitter:image" content="%PUBLIC_URL%/og-image.jpg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -19,8 +34,25 @@
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
-    -->
-    <title>HelpMate AI</title>
+    -->    <title>HelpMate AI | Intelligent Customer Support Automation Solution</title>
+    
+    <!-- Schema.org markup for Google -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "HelpMate AI",
+      "applicationCategory": "BusinessApplication",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      },
+      "description": "AI-powered customer support chatbot providing 24/7 assistance with intelligent responses and seamless human escalation.",
+      "operatingSystem": "Web",
+      "url": "https://customer-ai-support.onrender.com/"
+    }
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
